src/components/Header/Header.module.scss
@use "@/styles/colors.scss" as c;
@use "@/styles/mixins.scss" as m;

.header {
  position: fixed;
  top: 0;
  width: 100%;
  height: 5rem;
  background-color: c.$dark-surface;
  color: c.$dark-text;
  padding: 1rem;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);

  &Container {
    width: 70%;
    margin: auto;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .logo {
      user-select: none;
    }
  }

  &Secondary {
    display: flex;
    align-items: center;
    gap: 1rem;

    .headerBtn {
      font-size: 2rem;
      color: inherit;
      &:hover {
        color: c.$primary;
        background-color: c.$dark-hover-button;
      }
    }

    .settingsBtn {
      transform: rotate(180deg);
    }

    .userModalBtn {
      color: c.$dark-text;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0.6rem;
      border-radius: 2rem;
      width: 2.8rem;
      height: 2.8rem;
      background-color: c.$dark-hover-button;
      cursor: pointer;
      &:hover {
        color: c.$primary;
        background-color: c.$dark-hover-button;
      }
    }
  }
}

@include m.tablet {
  .header {
    &Container {
      width: 100%;

      .logo {
        display: none;
      }
    }

    &Secondary {
      width: 100%;
    }
  }
}

